# Projects

./: .cache-31zxspvtemgw2yenenmxiquywwnm  .gitignore  README.md  previous_data.json  receipt gen V2.py  receipt genn V1.py
Projects/: receipt gen V2.py  receipt gen V3.py
Projects/AppleMusictoSpotify/: .env  PlaylistTransfer_100+songs.py  _Yhex by Rishabh Patel - Apple Music.html  getSongNames.py  playlistCreator copy.py  playlistCreator.py
Projects/AppleMusictoSpotify/_Yhex by Rishabh Patel - Apple Music_files/: List-58d8bf79.css  index-6a6dbf67.css  index-d4ef68b3.js.download  musickit-components.esm.js.download  musickit.js.download  saved_resource.html
Projects/Gas Price Tracker/app/: README.md  pyproject.toml
Projects/Gas Price Tracker/app/gaspricetracker/: db.json  main (old).py  main.py  prettysoup.txt
Projects/Google search/: Def WebScrapper V1.py  Def WebScrapper V2.py
Projects/Googlesearch/: Def WebScrapper V1.py  Def_WebScrapper_V2.py
Projects/Googlesearch/app version/: webScrapper_app.py  webScrapper_mod.py
Projects/PDFSearch/: pdfSearch.py
Projects/Receipt Gen/: receipt gen V1.py  receipt gen V2.py  receipt gen V3 copy.py  receipt gen V3.py
Projects/Spotify Playlist Download/: README.md
Projects/Spotify Playlist Download/App/: pyproject.toml
Projects/Spotify Playlist Download/App/PlaylistDownloader/: __init__.py  main.py
